--- a/TranslateDemo/TranslateDemo.csproj
+++ b/TranslateDemo/TranslateDemo.csproj
@@ -71,6 +71,12 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmLongTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmLongTest.Designer.cs">
+      <DependentUpon>frmLongTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\TranslatorService\Reference.cs">
